--- a/.config/i3/config
+++ b/.config/i3/config
@@ -110,9 +110,9 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
+set $ws1 "1 Web"	
+set $ws2 "2 Notes"	
+set $ws3 "3 Code"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
@@ -188,7 +188,8 @@ new_window pixel
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        position top
-        status_command i3status
+  position top
+  status_command i3status
+  mode hide
 }
 
