--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -18,7 +18,7 @@ font:
 # Theme: One Dark
 colors:
   primary:
-    background: '0x1e2127'
+    background: '0x222222'
     foreground: '0xabb2bf'
     bright_foreground: '0xe6efff'
 
