--- a/i3/config
+++ b/i3/config
@@ -10,6 +10,7 @@ font pango:JetBrains Mono 9
 exec_always --no-startup-id feh --bg-scale ~/.config/i3/wallpaper.jpg
 
 # Start applications on startup
+exec i3-msg 'workspace 1 Web; exec qutebrowser'
 exec --no-startup-id i3-msg 'workspace 2 Notes; exec alacritty --hold -e helix PersonalDoc/Index.md'
 
 # Start XDG autostart .desktop files using dex. See also
@@ -123,6 +124,9 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+workspace "1 Web" output DP-1
+workspace "2 Notes" output DP-1
+
 # shutdown, restart, reload config
 bindsym $mod+Shift+q exec --no-startup-id systemctl poweroff -i, mode "default"
 bindsym $mod+Shift+r exec --no-startup-id systemctl reboot, mode "default"
@@ -154,6 +158,8 @@ hide_edge_borders smart
 
 # No title for container
 new_window pixel
+
+assign [class="qutebrowser"] 1 Web
 
 # Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
 bar {
