--- a/helix/themes/mydark.toml
+++ b/helix/themes/mydark.toml
@@ -1,31 +1,40 @@
 # My version of the onedark theme from: https://github.com/helix-editor/helix/blob/master/runtime/themes/onedark.toml
 # Author : Gokul Soumya <gokulps15@gmail.com>
 
-"attribute" = { fg = "yellow" }
-"comment" = { fg = "light-gray", modifiers = ["italic"] }
-"constant" = { fg = "cyan" }
-"constant.numeric" = { fg = "gold" }
-"constant.builtin" = { fg = "gold" }
-"constant.character.escape" = { fg = "gold" }
+"namespace" = { fg = "dark-blue" }
+# "module" = { fg = "black" }'
+
+"type" = { fg = "yellow" }
+"type.enum.variant" = { fg = "light-green" }
 "constructor" = { fg = "blue" }
-"function" = { fg = "blue" }
-"function.builtin" = { fg = "blue" }
-"function.macro" = { fg = "purple" }
-"keyword" = { fg = "red" }
+
+"keyword" = { fg = "blue" }
 "keyword.control" = { fg = "purple" }
+"keyword.operator" = { fg = "purple" }
 "keyword.control.import" = { fg = "red" }
 "keyword.directive" = { fg = "purple" }
 "label" = { fg = "purple" }
-"namespace" = { fg = "blue" }
+
 "operator" = { fg = "purple" }
-"keyword.operator" = { fg = "purple" }
 "special" = { fg = "blue" }
-"string" = { fg = "green" }
-"type" = { fg = "yellow" }
+
 # "variable" = { fg = "blue" }
-"variable.builtin" = { fg = "blue" }
-"variable.parameter" = { fg = "red" }
-"variable.other.member" = { fg = "red" }
+# "variable.builtin" = { fg = "blue" }
+# "variable.parameter" = { fg = "red" }
+# "variable.other.member" = { fg = "red" }
+"constant" = { fg = "gold" }
+# "constant.numeric" = { fg = "gold" }
+# "constant.builtin" = { fg = "gold" }
+# "constant.character.escape" = { fg = "gold" }
+
+# "function" = { fg = "blue" }
+"function.builtin" = { fg = "blue" }
+"function.macro" = { fg = "red" }
+"attribute" = { fg = "yellow" }
+
+"comment" = { fg = "light-gray", modifiers = ["italic"] }
+
+"string" = { fg = "green" }
 
 "markup.heading" = { fg = "red", modifiers =["bold"] }
 "markup.heading.marker" = { fg = "light-gray" }
@@ -81,12 +90,14 @@ diagnostic = { modifiers = ["underlined"] }
 "ui.menu.scroll" = { fg = "white", bg = "light-gray" }
 
 [palette]
-
+nord7 = "#6fbc9b"
 yellow = "#E5C07B"
 blue = "#61AFEF"
+dark-blue = "#518FAF"
 red = "#E06C75"
 purple = "#C678DD"
 green = "#98C379"
+light-green = "#98E399"
 gold = "#D19A66"
 cyan = "#56B6C2"
 white = "#ABB2BF"
