--- a/helix/themes/mydark.toml
+++ b/helix/themes/mydark.toml
@@ -1,36 +1,32 @@
 # My version of the onedark theme from: https://github.com/helix-editor/helix/blob/master/runtime/themes/onedark.toml
 # Author : Gokul Soumya <gokulps15@gmail.com>
 
-"namespace" = { fg = "white" }
-"module" = { fg = "white" }
+"namespace" = { fg = "AAAoperator " }
+"module" = { fg = "AAAoperator" }
 
-"type" = { fg = "green" }
-"type.enum.variant" = { fg = "green1" }
+"type" = { fg = "AAAclassname" }
+"type.enum.variant" = { fg = "AAAtypename" }
 # "constructor" = { fg = "type" }
 # "variable.other.member" = { fg = "variable" }
 
-"keyword" = { fg = "blue" }
-"keyword.directive" = { fg = "blue" }
+"keyword" = { fg = "AAAconstbuildin" }
+"keyword.directive" = { fg = "AAAkeyword" }
 # "keyword.control" = { fg = "special" }
-"label" = { fg = "blue" }
-"tag" = "blue"
+"label" = { fg = "AAAconstbuildin" }
+"tag" = "AAAconstbuildin"
 
 "special" = { fg = "white" }
-"operator" = { fg = "white" }
+"operator" = { fg = "AAAoperator" }
 
 "punctuation" = { fg = "white" }
 "punctuation.delimiter" = { fg = "white" }
 
-"variable" = { fg = "white" }
-"variable.parameter" = { fg = "white" }
-"variable.builtin" = { fg = "blue" }
+"variable" = { fg = "AAAoperator" }
+#"variable.parameter" = { fg = "white" }
 "constant" = { fg = "white" }
-"constant.builtin" = { fg = "blue" }
 
-"function" = { fg = "yellow" }
-"function.builtin" = { fg = "yellow" }
-"function.macro" = { fg = "yellow" }
-"attribute" = { fg = "yellow" }
+"function" = { fg = "function" }
+"attribute" = { fg = "function" }
 
 "comment" = { fg = "light-gray", modifiers = ["italic"] }
 
@@ -104,7 +100,6 @@ bool = "#569CD6"
 string = "#D69D85"
 
 
-yellow = "#E5C07B"
 blue = "#61AFEF"
 red = "#E06C75"
 purple = "#C678DD"
@@ -121,3 +116,22 @@ light-gray = "#5C6370"
 linenr = "#4B5263"
 
 orange = "#ce9178"
+
+# vs colors
+AAAbg = "#222228"
+AAAcomment = "#608B4E"
+AAAvariable = "#9CDCFE"
+AAAkeyword = "#C586C0"
+AAAoperator = "#DCDCDC"
+AAAnumber = "#B5CEA8"
+AAAconst = "#B4CEA8"
+AAAconstbuildin = "#569CD6"
+AAAbool = "#569CD6"
+AAAstring = "#D69D85"
+AAAstringinterpolation = "#E3BBAB"
+AAAfunctionname = "#DCDCAA"
+function = "#DCDCAC"
+AAAclassname = "#4EC9B0"
+AAAtypename = "#569CD6"
+AAAinherclassname = "#4EC9B0"
+AAAfunctionargandresult = "#70727E"
