--- a/helix/config.toml
+++ b/helix/config.toml
@@ -3,9 +3,7 @@ theme = "mydark"
 [editor]
 mouse = false
 color-modes = true
-
-[editor.lsp]
-display-messages = true
+completion-trigger-len = 1      # min-lenght to start auto-completion
 
 [keys.normal]
 "A-l"  = ":buffer-next"
