--- a/i3/config
+++ b/i3/config
@@ -161,6 +161,9 @@ new_window pixel
 
 assign [class="qutebrowser"] 1
 
+client.focused  	#555961 #555961 #FFFFFF #2e9ef4 #285577
+client.unfocused	#181818 #181818 #888888 #292d2e #222222
+
 # Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
 bar {
   position top
