--- a/i3/config
+++ b/i3/config
@@ -44,10 +44,10 @@ bindsym $mod+q kill
 bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 
 # navigation
-bindsym $mod+h focus left
-bindsym $mod+l focus right
-bindsym $mod+j focus down
-bindsym $mod+k focus up
+bindsym $mod+j focus left
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+semicolon focus right
 
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
@@ -55,10 +55,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+l move right
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
+bindsym $mod+Shift+j move left
+bindsym $mod+Shift+k move down
+bindsym $mod+Shift+l move up
+bindsym $mod+Shift+semicolon move right
 
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
