--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
-bluetuith/
-discord/
-pulse/
-NuGet/
-vlc/
-qBittorrent/
-qutebrowser/bookmarks/
-ObinsKit/
-cef_user_data/
+*
+!alacritty/**
+!bash/**
+!bottom/**
+!dconf/**
+!fish/**
+!gitui/**
+!helix/**
+!i3/**
+!lf/**
+!neofetch/**
+!polybar/**
+!qutebrowser/**
+!rofi/**
+!starship/**
+!README.md
+!install.sh
