--- a/i3/config
+++ b/i3/config
@@ -1,38 +1,53 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:JetBrains Mono 9
+# -----------------
+# exec on start-up
+# -----------------
 
 # Add background wallpaper
-exec_always --no-startup-id feh --bg-scale ~/.config/i3/wallpaper.jpg
+exec_always --no-startup-id feh --no-fehbg --bg-scale ~/.config/i3/wallpaper.jpg
+
+# polybar
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Start applications on startup
 exec i3-msg 'workspace 1; exec qutebrowser'
 exec --no-startup-id i3-msg 'workspace 2; exec alacritty --hold -e helix PersonalDoc/Index.md'
 
-# polybar
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-# Start XDG autostart .desktop files using dex. See also
-# https://wiki.archlinux.org/index.php/XDG_Autostart
-# exec --no-startup-id dex --autostart --environment i3
-
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# Use pactl to adjust volume in PulseAudio.
-# set $refresh_i3status killall -SIGUSR1 i3status
-# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-# bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+# -----------------
+# Bar & Styling
+# -----------------
+
+# Font for window titles. Will also be used by the bar unless a different font
+font pango:JetBrains Mono 9
+
+# If only of container on screen, no edge borders
+hide_edge_borders smart
+
+# No title for container
+new_window pixel
+
+client.focused  	#555961 #555961 #FFFFFF #2e9ef4 #285577
+client.unfocused	#181818 #181818 #888888 #292d2e #222222
+
+# -----------------
+# Workspace
+# -----------------
+
+workspace "1" output DP-1
+workspace "2" output DP-1
+
+assign [class="qutebrowser"] 1
+
+# -----------------
+# Bindings
+# -----------------
+
+set $mod Mod4
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -73,6 +88,8 @@ bindsym $mod+g split h
 
 # split in vertical orientation
 bindsym $mod+v split v
+
+bindsym $mod+r mode "resize"
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -127,9 +144,6 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-workspace "1" output DP-1
-workspace "2" output DP-1
-
 # shutdown, restart, reload config
 bindsym $mod+Shift+q exec --no-startup-id systemctl poweroff -i, mode "default"
 bindsym $mod+Shift+r exec --no-startup-id systemctl reboot, mode "default"
@@ -153,24 +167,3 @@ mode "resize" {
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
 }
-
-bindsym $mod+r mode "resize"
-
-# If only of container on screen, no edge borders
-hide_edge_borders smart
-
-# No title for container
-new_window pixel
-
-assign [class="qutebrowser"] 1
-
-client.focused  	#555961 #555961 #FFFFFF #2e9ef4 #285577
-client.unfocused	#181818 #181818 #888888 #292d2e #222222
-
-# Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
-# bar {
-#  position top
-#  status_command i3status
-#  mode hide
-# }
-
