--- a/leftwm/themes/current/polybar.config
+++ b/leftwm/themes/current/polybar.config
@@ -22,17 +22,18 @@ margin-top = 0
 
 ;; Bar Settings
 
-[bar/main]
-monitor =
-monitor-fallback =
+[bar/main0]
 monitor-strict = false
 override-redirect = false
+offset-x = 0
+monitor = ${env:monitor}
+;offset-y = ${env:y}
 
 bottom = false
 fixed-center = true
-width = 100%
+width = ${env:width}
 height = 28
-offset-x = 0
+; offset-x = 0
 offset-y = 0
 background = ${color.bg}
 foreground = ${color.fg}
@@ -51,37 +52,107 @@ font-0 = "Droid Sans:size=9:weight=bold;3"
 font-1 = "Iosevka Nerd Font:size=12;3"
 
 modules-left = workspace0
-modules-center =
+modules-center = 
 modules-right = date alsa network sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-; The separator will be inserted between the output of each module
-separator =
+; If true, the bar will not shift its
+; contents when the tray changes
+tray-detached = false
 
-; Opacity value between 0.0 and 1.0 used on fade in/out
-dim-value = 1.0
+; Tray icon max size
+tray-maxsize = 16
 
-; Value to be used to set the WM_NAME atom
-; If the value is empty or undefined, the atom value
-; will be created from the following template: polybar-[BAR]_[MONITOR]
-; NOTE: The placeholders are not available for custom values
-wm-name = 
+; Background color for the tray container 
+; ARGB color (e.g. #f00, #ff992a, #ddff1023)
+; By default the tray container will use the bar
+; background color.
+tray-background = ${color.background}
 
-; Locale used to localize various module data (e.g. date)
-; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale = 
+; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
+tray-offset-x = 0
+tray-offset-y = 0
 
-; Position of the system tray window
-; If empty or undefined, tray support will be disabled
-; NOTE: A center aligned tray will cover center aligned modules
+; Pad the sides of each tray icon
+tray-padding = 0
+
+; Scale factor for tray clients
+tray-scale = 1.0
+
+; Restack the bar window and put it above the
+; selected window manager's root
 ;
-; Available positions:
-;   left
-;   center
-;   right
-;   none
-tray-position = none
+; Fixes the issue where the bar is being drawn
+; on top of fullscreen window's
+;
+; Currently supported WM's:
+;   bspwm
+;   i3 (requires: `override-redirect = true`)
+;;wm-restack =
+
+; Set a DPI values used when rendering text
+; This only affects scalable fonts
+; dpi = 
+
+; Enable support for inter-process messaging
+; See the Messaging wiki page for more details.
+enable-ipc = true
+
+; Fallback click handlers that will be called if
+; there's no matching module handler found.
+click-left = 
+click-middle = 
+click-right =
+scroll-up =
+scroll-down =
+double-click-left =
+double-click-middle =
+double-click-right =
+
+; Requires polybar to be built with xcursor support (xcb-util-cursor)
+; Possible values are:
+; - default   : The default pointer as before, can also be an empty string (default)
+; - pointer   : Typically in the form of a hand
+; - ns-resize : Up and down arrows, can be used to indicate scrolling
+cursor-click = 
+cursor-scroll = 
+
+
+[bar/main1]
+monitor-strict = false
+override-redirect = false
+offset-x = 0
+monitor = ${env:monitor}
+;offset-y = ${env:y}
+
+bottom = false
+fixed-center = true
+width = ${env:width}
+height = 28
+; offset-x = 0
+offset-y = 0
+background = ${color.bg}
+foreground = ${color.fg}
+
+; Background gradient (vertical steps)
+;   background-[0-9]+ = #aarrggbb
+;;background-0 = 
+
+radius-top = 0.0
+radius-bottom = 0.0
+padding = 3
+module-margin-left = 3
+module-margin-right = 3
+
+font-0 = "Droid Sans:size=9:weight=bold;3"
+font-1 = "Iosevka Nerd Font:size=12;3"
+
+modules-left = workspace1
+modules-center = 
+modules-right = date alsa network sysmenu
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -376,6 +447,13 @@ tail = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/workspace1]
+type = custom/script
+exec = leftwm-state -w 1 -t $SCRIPTPATH/template.liquid
+tail = true
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/sysmenu]
 type = custom/text
 
@@ -384,7 +462,7 @@ content = 襤
 content-foreground = ${color.fg}
 ;;content-padding = 4
 
-click-left = ~/.config/polybar/panels/scripts/powermenu.sh --edark
-click-right = ~/.config/polybar/panels/scripts/powermenu.sh --edark
+click-left = bash $SCRIPTPATH/powermenu $SCRIPTPATH
+click-right = bash $SCRIPTPATH/powermenu $SCRIPTPATH
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
