--- a/helix/config.toml
+++ b/helix/config.toml
@@ -2,6 +2,7 @@ theme = "mydark"
 
 [editor]
 mouse = false
+bufferline = "multiple"
 color-modes = true
 completion-trigger-len = 1      # min-lenght to start auto-completion
 
