--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -8,6 +8,6 @@ comment-token = "//"
 indent = { tab-width = 4, unit = "\t" }
 language-server = { command = "omnisharp", args = [ "--languageserver" ] }
 
-[[grammar]]
-name = "c-sharp"
-source = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", rev = "9c494a503c8e2044bfffce57f70b480c01a82f03" }
+#[[grammar]]
+#name = "c-sharp"
+#source = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", rev = "9c494a503c8e2044bfffce57f70b480c01a82f03" }
