--- a/i3/config
+++ b/i3/config
@@ -1,5 +1,6 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+
 # -----------------
 # exec on start-up
 # -----------------
@@ -12,7 +13,8 @@ exec_always --no-startup-id $HOME/.config/i3/polybar/launch.sh
 
 # Start applications on startup
 exec i3-msg 'workspace 1; exec qutebrowser'
-exec --no-startup-id i3-msg 'workspace 2; exec alacritty -e helix PersonalDoc/Index.md'
+exec --no-startup-id i3-msg 'workspace 2; exec alacritty -e helix ./Documents/_PersonalDoc/README.md'
+
 
 # -----------------
 # Bar & Styling
@@ -29,6 +31,7 @@ for_window [class="^.*"] border pixel 1
 client.focused  	#555961 #555961 #FFFFFF #2e9ef4 #285577
 client.unfocused	#181818 #181818 #888888 #292d2e #222222
 
+
 # -----------------
 # Workspace
 # -----------------
@@ -38,14 +41,18 @@ workspace "2" output DP-1
 
 assign [class="qutebrowser"] 1
 
+
 # -----------------
 # Bindings
 # -----------------
 
 set $mod Mod4
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+
+# shutdown, restart, reload config
+bindsym $mod+Shift+q exec --no-startup-id systemctl poweroff -i, mode "default"
+bindsym $mod+Shift+r exec --no-startup-id systemctl reboot, mode "default"
+bindsym $mod+Shift+c reload
 
 # start a terminal
 bindsym $mod+n exec alacritty
@@ -53,7 +60,7 @@ bindsym $mod+n exec alacritty
 # rofi
 bindsym $mod+o exec "rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/i3/rofi/launcher.rasi"
 
-# flameshot
+# screen shot with flameshot
 bindsym $mod+Shift+s exec "flameshot gui"
 
 # kill focused window
@@ -80,6 +87,9 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
+
+# Use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
 
 # split in horizontal orientation
 bindsym $mod+g split h
@@ -142,18 +152,14 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# shutdown, restart, reload config
-bindsym $mod+Shift+q exec --no-startup-id systemctl poweroff -i, mode "default"
-bindsym $mod+Shift+r exec --no-startup-id systemctl reboot, mode "default"
-bindsym $mod+Shift+c reload
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym semicolon resize grow width 10 px or 10 ppt
 
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
