--- a/helix/config.toml
+++ b/helix/config.toml
@@ -29,6 +29,11 @@ completion-trigger-len = 1      # min-lenght to start auto-completion
 "C-q"  = "wclose"
 "C-e"  = "transpose_view"
 
+[keys.normal.space]
+f      = "no_op"
+F      = "no_op"
+b      = "no_op"
+
 [keys.select]
 "j"    = "extend_char_left"
 "k"    = "extend_line_down"
