--- a/i3/polybar/polybar.config
+++ b/i3/polybar/polybar.config
@@ -1,6 +1,9 @@
+# See more definitions: https://github.com/polybar/polybar/wiki
+
 [bar/main]
 monitor = ${env:MONITOR}
-height = 28
+enable-ipc = true
+height = 24
 padding = 3
 module-margin-left = 3
 module-margin-right = 3
@@ -8,12 +11,11 @@ module-margin-right = 3
 background = #D000000
 foreground = #EAEAEA
 line-size = 2
-;;font-0 = FiraCode Nerd Font:style=Bold:pixelsize=9;1
-font-0 = "Droid Sans:size=9:weight=bold;3"
-font-1 = "Iosevka Nerd Font:size=12;3"
+font-1 = "FiraCode Nerd Font:size=10;1"
+font-0 = "Droid Sans:size=9:weight=bold;1"
 
 modules-center = i3
-modules-right = sound date
+modules-right = sound bluetooth dunst date
 
 [module/sound]
 type = internal/pulseaudio
@@ -21,11 +23,24 @@ format-volume = "<ramp-volume>   <label-volume>"
 label-volume = %percentage%
 label-muted = "ﱝ   %percentage%"
 label-muted-foreground = #666666
-
 ramp-volume-0 = ""
 ramp-volume-1 = ""
 ramp-volume-2 = ""
 ramp-volume-3 = ""
+
+[module/bluetooth]
+type = custom/script
+exec = ~/.config/i3/rofi/rofi-bluetooth.sh --status
+interval = 1
+click-left = ~/.config/i3/rofi/rofi-bluetooth.sh &
+
+[module/dunst]
+type = custom/ipc
+initial = 1
+format-foreground = #BFAB0B
+
+hook-0 = echo "%{A1:dunstctl set-paused true && polybar-msg hook dunst 2:}%{A}" &
+hook-1 = echo "%{A1:dunstctl set-paused false && polybar-msg hook dunst 1:}%{A}" &
 
 [module/date]
 type = internal/date
