--- a/i3/config
+++ b/i3/config
@@ -89,7 +89,7 @@ bindsym $mod+Shift+Right move right
 floating_modifier $mod
 
 # split in horizontal orientation
-bindsym $mod+g split h
+bindsym $mod+h split h
 
 # split in vertical orientation
 bindsym $mod+v split v
