--- a/helix/config.toml
+++ b/helix/config.toml
@@ -9,18 +9,18 @@ color-modes = true
 completion-trigger-len = 1      # min-lenght to start auto-completion
 
 [keys.normal]
-"j"    = "move_char_left"
-"k"    = "move_line_down"
-"l"    = "move_line_up"
-";"    = "move_char_right"
+#"j"    = "move_char_left"
+#"k"    = "move_line_down"
+#"l"    = "move_line_up"
+#";"    = "move_char_right"
 "G"    = "goto_file_end"
 # "n"    = "open_below"
 # "N"    = "open_above"
 "o"    = "file_picker"
 "O"    = "file_picker_in_current_directory"
 # Tab/Buffer
-"A-;"  = "goto_next_buffer"
-"A-j"  = "goto_previous_buffer"
+"A-l"  = "goto_next_buffer"
+"A-h"  = "goto_previous_buffer"
 "A-q"  = ":buffer-close"
 # Window
 "C-o"  = "vsplit_new"
@@ -37,7 +37,7 @@ F      = "no_op"
 b      = "no_op"
 
 [keys.select]
-"j"    = "extend_char_left"
-"k"    = "extend_line_down"
-"l"    = "extend_line_up"
-";"    = "extend_char_right"
+"h"    = "extend_char_left"
+"j"    = "extend_line_down"
+"k"    = "extend_line_up"
+"l"    = "extend_char_right"
