--- a/helix/themes/mydark.toml
+++ b/helix/themes/mydark.toml
@@ -1,7 +1,7 @@
 # My version of the onedark theme from: https://github.com/helix-editor/helix/blob/master/runtime/themes/onedark.toml
 
 # Theme - UI
-"ui.background" = { bg = "#242830" }
+"ui.background" = { bg = "#20232B" }
 "ui.virtual" = { fg = "faint-gray" }
 "ui.virtual.indent-guide" = { fg = "faint-gray" }
 "ui.virtual.whitespace" = { fg = "light-gray" }
