Add Hyprland configuration

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,4 @@
 preload = ~/.config/hypr/wallpaper.png
 
-wallpaper = eDP-1,contain:~/.config/hypr/wallpaper.png
+wallpaper = HDMI-A-1,contain:~/.config/hypr/wallpaper.png
+wallpaper = HDMI-A-2,contain:~/.config/hypr/wallpaper.png
