--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,12 +6,21 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = hyprpaper
+exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc
+
+exec-once = hyprctl dispatch exec [workspace 1 silent] brave
+exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md && bash"'
+exec-once = hyprctl dispatch exec [workspace 3 silent] slack
+exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi'
+exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_sneleentaxi/Sneleentaxi.sln
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
+# env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,MyCursor
+env = HYPRCURSOR_SIZE,48
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -42,7 +51,7 @@ general {
     layout = dwindle
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
 }
 
 decoration {
@@ -85,7 +94,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # new_is_master = true
 }
 
 gestures {
@@ -100,9 +109,12 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+#device:epic-mouse-v1 {
+#    sensitivity = -0.5
+#}
+
+windowrule = workspace 1, ^(.*Brave.*)$
+windowrule = workspace 10, ^(jetbrains-rider)$
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -111,17 +123,33 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 
+# Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
+# workspace = 3, rounding:false, decorate:false, gapsin:50, gapsout:50
+workspace = 1, monitor:HDMI-A-2
+workspace = 2, monitor:HDMI-A-2
+workspace = 3, monitor:HDMI-A-2
+workspace = 4, monitor:HDMI-A-2
+workspace = 5, monitor:HDMI-A-2
+workspace = 6, monitor:HDMI-A-1
+workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
+workspace = 9, monitor:HDMI-A-1
+workspace = 10, monitor:HDMI-A-1
+
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, N, exec, alacritty
-bind = $mainMod, P, exec, brave
+bind = $mainMod, O, exec, wofi --show drun --conf ~/.config/hypr/wofi/config
 bind = $mainMod, Q, killactive, 
+
 bind = $mainMod, M, exit, 
+bind = $mainMod SHIFT, D, exec, hyprlock
+bind = $mainMod SHIFT, S, exec, hyprshot -m region
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, SPACE, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -156,8 +184,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
